styles/base.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

:root {
    --primary-color: #219ebc;
    --secondary-color: #fb8500;
    --accent-color-1: #8ECAE6;
    --accent-color-2: #FFB703;
    --accent-color-3: #023047;
    --font-color: #333;
    --background-color: #d5d5d5;
}
body {
    font-family: "Nunito", sans-serif, Helvetica;
    background-color: #d5d5d5;
    color: #333;
    line-height: 1.6;
    padding: 20px;
   
}

h1, h2, h3 {
    margin-bottom: 15px;
    color: var(--primary-color);
    font-family: "Press Start 2P", cursive;
}

/* blink {
    animation: blink-animation 1s steps(5, start) infinite;
    -webkit-animation: blink-animation 1s steps(5, start) infinite;
    color: var(--primary-color);
} */


.wrapper {
    display: grid;
    grid-template-columns: 300px 1fr;
    grid-template-areas: 
        "header header"
        "side-nav card"
        "side-nav card"
        "side-nav card"
        "side-nav footer";
    margin: 0px;
    margin-top : 0px;
    background-color: var(--accent-color-1);
}
header {
    background-color: var(--background-color);
    color: #fff;
    padding: 10px 0;
    text-align: center;
    margin-bottom: 20px;
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    grid-area: header;

}   

nav a {
    color: var(--primary-color);
    text-decoration: none;
    margin: 0 10px;
    font-weight: bold;
}

.logo {
    position: absolute;
    top: 6rem;
    left: 2rem;
    grid-area: logo;
}

#course-title {
    font-family: 'Press Start 2P', cursive;
    font-size: 1.2rem;
    color: var(--font-color);
    margin-top: 10px;
    display: flex;
    align-items: center;
}

strong {
    color: var(--accent-color-2);
    font-weight: bold;
    text-transform: uppercase;
    text-shadow: #333 1px 1px 2px;
}

.top-nav {
  grid-area: header;
  background-color: var(--background-color);
  padding: 10px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.top-nav a {
  margin: 0 15px;
  font-size: 1rem;
  color: var(--font-color);
    text-decoration: none;  
    font-weight: bold;
    align-self: start;
    padding: 2px 2px
}

.top-nav a:hover {
    color: var(--secondary-color);
    text-decoration: none;
    background-color: var(--accent-color-3);
    padding: 2px 2px;
}

.top-nav a:active {
    color: var(#044f74);
    text-decoration: none;
}

header .banner-logo {
    width: 100%;
}

/* marquee{
    font-family: 'Press Start 2P', cursive;
    font-size: 1.2rem;
    color: var(--secondary-color);
    margin-top: 10px;
    display: flex;
    align-items: center;
    background-color: var(--primary-color);
    padding: 2rem;
}    */

.side-nav {
    background-color: var(--accent-color-2);
    padding: 15px;
    margin-bottom: 20px;
    grid-area: side-nav;
}

ul {
    list-style-type: none;
    padding: 0;
    border-bottom: #333 solid thin;
    padding: 10px 0 10px 0;
    margin-top: 10px;
    margin-bottom: 10px;
    
}

.side-nav h2 {
    color: #fff;
    padding: 30px 0 10px 0;
    margin-bottom: 10px;
    font-family: 'Press Start 2P', cursive;
    border-bottom: #333 solid;
    border-bottom-width: thin;
}

.side-nav h3 {
    color: #fff;
    margin-top: 20px;
    margin-bottom: 10px;
    font-family: 'Press Start 2P', cursive;
    border-bottom: #333 solid;
    border-bottom-width: thin;
}

.side-nav a{
    color: #fff;
    text-decoration: none;
    display: block;
    
}

.side-nav a:hover {
    text-decoration: none;
    color: var(--primary-color);
}

.side-nav a:active {
    color: var(--secondary-color);
    text-decoration: none;
}

button {
    background-color: red;
    color: #fff;
    border: none;
    padding: 10px 25px;
    cursor: pointer;
    font-size: 1rem;
}


.card {
    background-color: #fff;
    padding: 20px;
    border-bottom: #333 solid;
    border-bottom-width: thin;
    grid-area: card;
    
}

.card h1 {
    margin-bottom: 15px;
}
.card p {
    margin-bottom: 15px;
}

.card img {
    max-width: 100%;
    height: auto;
    margin-bottom: 15px;
    text-wrap: var(--font-color);
}

main {
    margin-bottom: 20px;
}

footer {
    background-color: var(--background-color);
    color: #fff;
    text-align: center;
    padding: 10px 0;
    margin-top: 20px;
    grid-area: footer;
}

